feat: created xml file for main activity's menu and inflated layout of the menu on main activity's layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">SplitTheBill</string>
     <string name="name">Nome</string>
     <string name="moneyPaid">Dinheiro Pago</string>
+    <string name="add_member">Adicionar Integrante</string>
+    <string name="split_bill">Rachar Conta</string>
 </resources>
