feat(app): implemented CRUD operations and added context menu on main activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="member_info">Informações do Integrante</string>
     <string name="purchasedItems">Itens comprados</string>
     <string name="save">Salvar</string>
+    <string name="remove_member">Remover Membro</string>
+    <string name="edit_member">Editar Membro</string>
 </resources>
