--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <resources>
     <string name="app_name">SplitTheBill</string>
     <string name="name">Nome</string>
-    <string name="moneyPaid">Dinheiro Pago</string>
+    <string name="money_paid">Dinheiro Pago</string>
     <string name="add_member">Adicionar Integrante</string>
     <string name="split_bill">Rachar Conta</string>
     <string name="member_info">Informações do Integrante</string>
-    <string name="purchasedItems">Itens comprados</string>
+    <string name="purchased_items">Itens comprados</string>
     <string name="save">Salvar</string>
     <string name="remove_member">Remover Membro</string>
     <string name="edit_member">Editar Membro</string>
-    <string name="moneyToPay">Dinheiro a pagar: %.2f R$</string>
-    <string name="moneyToReceive">Dinheiro a receber: %.2f R$</string>
+    <string name="money_to_pay">Dinheiro a pagar: %.2f R$</string>
+    <string name="money_to_receive">Dinheiro a receber: %.2f R$</string>
 </resources>
